recurrence details gets added on POI insert now
